# channel-surfer

./: .gitignore  Cargo.toml  README.md  package.json  retro-tv  server.js  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: TVDistortionEffect.jsx  TVGuideChannel.jsx
src/: main.rs
static/: index.html
