[package]
name = "video_server"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
clap = { version = "4.3", features = ["derive"] }
anyhow = "1.0"
indicatif = "0.17"
regex = "1.8"
url = "2.4"
futures-util = "0.3"
tokio-util = "0.7"
crossterm = "0.27"
tui = { package = "ratatui", version = "0.26.1" }
async-trait = "0.1.74"

[[bin]]
name = "ia-downloader"
path = "src/bin/ia_downloader.rs"

